--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Your Name</title>
 </head>
 <body>
-  <h1>Your Name</h1>
-  <p>IT Systems Specialist | Networking | Security</p>
+  <h1>Seth Kelso</h1>
+  <p>Jr Network Manager | Networking | Security</p>
   <p>Welcome to my personal site.</p>
 </body>
 </html>
+
