--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Name</title>
+  <title>Work in Progress</title>
 </head>
 <body>
   <h1>Seth Kelso</h1>
@@ -9,4 +9,5 @@
   <p>Welcome to my personal site.</p>
 </body>
 </html>
+
 
