--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <title>Work in Progress</title>
 </head>
 <body>
-  <h1>Seth Kelso</h1>
+  <h1>Seth Kelsooo</h1>
   <p>Jr Network Manager | Networking | Security</p>
   <p>Welcome to my personal site.</p>
 </body>
 </html>
+
 
 
