--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Seth Kelso</h1>
   <p>Jr Network Manager | Networking | Security</p>
-  <p>Welcome to my personal site. TESTing</p>
+  <p>Welcome to my personal site. Test to see if this pushes from git</p>
 </body>
 </html>
 
